--- a/Tri-Wpf/Views/MainWindow.xaml
+++ b/Tri-Wpf/Views/MainWindow.xaml
@@ -86,13 +86,13 @@
 
                         <TextBlock Text="SL (mm)：" Grid.Row="1" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
                         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                            <TextBox Text="{Binding SL, UpdateSourceTrigger=PropertyChanged}" Width="130"
+                            <TextBox Text="{Binding Sl, UpdateSourceTrigger=PropertyChanged}" Width="130"
                                      Margin="0,0,10,0" Height="22" />
                         </StackPanel>
 
                         <TextBlock Text="SF (mm)：" Grid.Row="2" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
                         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                            <TextBox Text="{Binding SF, UpdateSourceTrigger=PropertyChanged}" Width="130"
+                            <TextBox Text="{Binding Sf, UpdateSourceTrigger=PropertyChanged}" Width="130"
                                      Margin="0,0,10,0" Height="22" />
                         </StackPanel>
 
