--- a/Tri-Wpf/App.xaml
+++ b/Tri-Wpf/App.xaml
@@ -5,7 +5,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Resources/Window.Resources.xaml" />
+                <ResourceDictionary Source="/Core/Resources/Window.Resources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
