--- a/Tri-Wpf/Views/ReceiveBeamTab/ReceiveBeam.xaml
+++ b/Tri-Wpf/Views/ReceiveBeamTab/ReceiveBeam.xaml
@@ -64,7 +64,27 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
+
+                        <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="100"/>
+                        
+                        <!-- Checkbox column -->
+                        <DataGridCheckBoxColumn Header="Active" Binding="{Binding IsActive}" Width="80"/>
+                        
+                        <!-- ComboBox column -->
+                        <DataGridComboBoxColumn Header="Department" 
+                                                SelectedItemBinding="{Binding Department}"
+                                                ItemsSource="{Binding Source={StaticResource departments}}"/>
+                        
+                        <!-- Template column for custom content -->
+                        <DataGridTemplateColumn Header="Actions" Width="100">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <!-- <Button Content="Edit" Click="EditButton_Click"/> -->
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
                 </DataGrid.Columns>
+
             </DataGrid>
         </Grid>
 
