--- a/Tri-Wpf/Views/MainWindow.xaml
+++ b/Tri-Wpf/Views/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="下部工のユニット登録" Height="381" Width="975"
         FontSize="12"
-        xmlns:tabControl="clr-namespace:Tri_Wpf.Views.ReceiveBeamTab"
+        xmlns:tabControl="clr-namespace:Tri_Wpf.Views.Tabs"
         d:DataContext="{d:DesignInstance viewModels:MainWindowVm, IsDesignTimeCreatable=True}">
     <Grid Background="#F0F0F0">
         <Grid.ColumnDefinitions>
@@ -44,101 +44,13 @@
             </Grid>
 
             <!-- Tab Control -->
-            <TabControl Grid.Row="1" Margin="0,0,0,-2">
-                <TabItem Header="受桁">
+            <TabControl Grid.Row="1" Margin="0,0,0,-2" SelectedIndex="1">
+                <TabItem Header="受桁" >
                     <tabControl:ReceiveBeam DataContext="{Binding ReceiveBeamVm}" />
                 </TabItem>
 
                 <TabItem Header="杭" Width="45" Margin="-4 0 0 0">
-                    <Grid Margin="5">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-
-                        <!-- Pile Size -->
-                        <TextBlock Text="杭サイズ：" Grid.Row="0" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
-                        <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                            <!-- <TextBlock Text="H300×300×10×15" Margin="5"/> -->
-                            <ComboBox Width="130"
-                                      ItemsSource="{Binding ProfileOptions}"
-                                      SelectedItem="{Binding Profile, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                        </StackPanel>
-
-                        <TextBlock Text="SL (mm)：" Grid.Row="1" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
-                        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                            <TextBox Text="{Binding Sl, UpdateSourceTrigger=PropertyChanged}" Width="130"
-                                     Margin="0,0,10,0" Height="22" />
-                        </StackPanel>
-
-                        <TextBlock Text="SF (mm)：" Grid.Row="2" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
-                        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                            <TextBox Text="{Binding Sf, UpdateSourceTrigger=PropertyChanged}" Width="130"
-                                     Margin="0,0,10,0" Height="22" />
-                        </StackPanel>
-
-                        <!-- Pile Count -->
-                        <TextBlock Text="杭本数：" Grid.Row="3" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
-                        <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                            <TextBox Text="{Binding NumberOfPiles, Mode=TwoWay}" Width="130" Margin="0,0,10,0"
-                                     Height="22" />
-                            <Button Content="編集"
-                                    Command="{Binding EditSpacingCommand}"
-                                    Margin="5 0 0 0"
-                                    Width="60"
-                                    Height="22" />
-                        </StackPanel>
-                        <StackPanel Grid.Row="3" Grid.Column="2" VerticalAlignment="Center">
-                            <TextBlock Text="{Binding Interval}" Grid.Row="5" Grid.Column="0" Margin="5"
-                                       HorizontalAlignment="Right" />
-                        </StackPanel>
-
-                        <StackPanel Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">
-                            <CheckBox Content="トッププレート" IsChecked="{Binding HasTopPlate}" />
-                        </StackPanel>
-                        <!-- <TextBlock Text="SL (mm)：" Grid.Row="4" Grid.Column="0" Margin="5" VerticalAlignment="Center" /> -->
-                        <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                            <ComboBox Width="130" Height="22"
-                                      IsEnabled="{Binding HasTopPlate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                                <ComboBoxItem IsSelected="True">
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock>PL-400×16×400</TextBlock>
-                                    </StackPanel>
-                                </ComboBoxItem>
-                                <ComboBoxItem>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock>PL-400×16×40</TextBlock>
-                                    </StackPanel>
-                                </ComboBoxItem>
-                            </ComboBox>
-                        </StackPanel>
-
-                        <!-- Pile Direction -->
-                        <TextBlock Text="杭の向き：" Grid.Row="5" Grid.Column="0" Margin="5" VerticalAlignment="Center" />
-                        <StackPanel Grid.Row="5" Grid.Column="1" Margin="5" HorizontalAlignment="Left">
-                            <ComboBox Width="130" Height="22">
-                                <ComboBoxItem IsSelected="True">
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock>0°</TextBlock>
-                                    </StackPanel>
-                                </ComboBoxItem>
-                                <ComboBoxItem>
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock>90°</TextBlock>
-                                    </StackPanel>
-                                </ComboBoxItem>
-                            </ComboBox>
-                        </StackPanel>
-                    </Grid>
+                    <tabControl:Pile DataContext="{Binding PileVm}" />
                 </TabItem>
 
                 <TabItem Header="ブレス/継ぎ材" Width="95" Margin="-4 0 0 0">
