--- a/Tri-Wpf/Views/Tabs/ReceiveBeam.xaml
+++ b/Tri-Wpf/Views/Tabs/ReceiveBeam.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Tri_Wpf.Views.ReceiveBeamTab.ReceiveBeam"
+﻿<UserControl x:Class="Tri_Wpf.Views.Tabs.ReceiveBeam"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:viewModels="clr-namespace:Tri_Wpf.ViewModels.ReceiveBeamVm"
+             xmlns:receiveBeamVm="clr-namespace:Tri_Wpf.ViewModels.ReceiveBeamVm"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance viewModels:ReceiveBeamVm, IsDesignTimeCreatable=True}"
+             d:DataContext="{d:DesignInstance receiveBeamVm:ReceiveBeamVm, IsDesignTimeCreatable=True}"
              Width="500"
              d:DesignHeight="*" d:DesignWidth="*">
 
@@ -64,17 +64,17 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-
-                        <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="100"/>
-                        
-                        <!-- Checkbox column -->
-                        <DataGridCheckBoxColumn Header="Active" Binding="{Binding IsActive}" Width="80"/>
-                        
-                        <!-- ComboBox column -->
-                        <DataGridComboBoxColumn Header="Department" 
-                                                SelectedItemBinding="{Binding Department}"
-                                                ItemsSource="{Binding Source={StaticResource departments}}"/>
-                        
+                        <!-- -->
+                        <!-- <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="100"/> -->
+                        <!-- -->
+                        <!-- ~1~ Checkbox column @1@ -->
+                        <!-- <DataGridCheckBoxColumn Header="Active" Binding="{Binding IsActive}" Width="80"/> -->
+                        <!-- -->
+                        <!-- ~1~ ComboBox column @1@ -->
+                        <!-- <DataGridComboBoxColumn Header="Department"  -->
+                        <!--                         SelectedItemBinding="{Binding Department}" -->
+                        <!--                         ItemsSource="{Binding Source={StaticResource departments}}"/> -->
+                        <!-- -->
                         <!-- Template column for custom content -->
                         <DataGridTemplateColumn Header="Actions" Width="100">
                             <DataGridTemplateColumn.CellTemplate>
