--- a/Tri-Wpf/Views/Tabs/Pile.xaml
+++ b/Tri-Wpf/Views/Tabs/Pile.xaml
@@ -3,10 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:tabs="clr-namespace:Tri_Wpf.Views.Tabs"
-             d:DataContext="{d:DesignInstance tabs:Pile, IsDesignTimeCreatable=True}"
+             xmlns:vm="clr-namespace:Tri_Wpf.ViewModels.PileVm"
              mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance vm:PileVm, IsDesignTimeCreatable=True}"
              d:DesignHeight="300" d:DesignWidth="300">
+
+    <!-- <UserControl.DataContext> -->
+    <!--     <vm:PileVm /> -->
+    <!-- </UserControl.DataContext> -->
+
     <Grid>
         <Grid Margin="5">
             <Grid.RowDefinitions>
@@ -65,19 +70,12 @@
             </StackPanel>
             <!-- <TextBlock Text="SL (mm)：" Grid.Row="4" Grid.Column="0" Margin="5" VerticalAlignment="Center" /> -->
             <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" Margin="5">
-                <ComboBox Width="130" Height="22"
-                          IsEnabled="{Binding HasTopPlate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                    <ComboBoxItem IsSelected="True">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock>PL-400×16×400</TextBlock>
-                        </StackPanel>
-                    </ComboBoxItem>
-                    <ComboBoxItem>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock>PL-400×16×40</TextBlock>
-                        </StackPanel>
-                    </ComboBoxItem>
-                </ComboBox>
+                <ComboBox Width="130"
+                          ItemsSource="{Binding TopPlateOptions}"
+                          SelectedItem="{Binding SelectedTopPlate, Mode=TwoWay}" />
+
+                <TextBlock Text="{Binding SelectedTopPlate}" Grid.Row="5" Grid.Column="0" Margin="5"
+                           HorizontalAlignment="Right" />
             </StackPanel>
 
             <!-- Pile Direction -->
