--- a/Tri-Wpf/Views/SpacingEdit.xaml
+++ b/Tri-Wpf/Views/SpacingEdit.xaml
@@ -76,7 +76,7 @@
 
             <!-- Right-aligned buttons -->
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
-                <Button Content="適用" Margin="0,0,10,0" Width="48" Click="ApplyButton_Click" />
+                <Button Content="適用" Margin="0,0,10,0" Width="48" Click="{Binding SwitchDataCommand}" />
                 <Button Content="閉じる" Width="48" Click="CloseButton_Click" />
             </StackPanel>
         </DockPanel>
